@@ -1,5 +1,9 @@
 Changes with APR-util 1.2.9
 
+  *) Change configure's expat detection to use standard linker-based
+     tests, fixing build on e.g. biarch Linux systems.  PR 28205.
+     [Joe Orton, Ruediger Pluem]     
+
   *) Portably implement testdate's long-time constants to solve
      compilation faults where #LL isn't valid.  [Curt Arnold]
 
